# latentred

./: .gitmodules  README.md
doc/: mainboard-power-budget.ods  system-block.dia
firmware/lcbringup/: .gdbinit  CMakeLists.txt  main.ld  openocd-orb.cfg  orb.sh  orbtop-release.sh  orbtop.sh  staticnet-config.h
firmware/lcbringup/main/: CMakeLists.txt  Init.cpp  LatentRedCLISessionContext.cpp  LatentRedCLISessionContext.h  LatentRedPhyPollTask.cpp  LatentRedPhyPollTask.h  LatentRedSSHTransportServer.cpp  LatentRedSSHTransportServer.h  LatentRedTCPProtocol.cpp  LatentRedTCPProtocol.h  LatentRedUDPProtocol.cpp  LatentRedUDPProtocol.h  LocalConsoleTask.h  PortState.cpp  PortState.h  globals.cpp  latentred.h  vectors.cpp
mechanical/: .gitignore
pcb/dual-sfp28/: .gitignore  dual-sfp28.kicad_pcb  dual-sfp28.kicad_prl  dual-sfp28.kicad_pro  dual-sfp28.kicad_sch
pcb/lcbringup/: .gitignore  README.md  arf6.kicad_sch  fpgasupport.kicad_sch  lcbringup.kicad_pcb  lcbringup.kicad_prl  lcbringup.kicad_pro  lcbringup.kicad_sch  mcu.kicad_sch  mdio.kicad_sch  psu.kicad_sch  sfp.kicad_sch  unused-io.kicad_sch
pcb/linecard/: .gitignore  README.md  bringup-notes.md  linecard.kicad_pcb  linecard.kicad_pro  linecard.kicad_sch  phy0.kicad_sch  phy0_mdi.kicad_sch  phy0_pwr.kicad_sch  phy1.kicad_sch  phy1_mdi.kicad_sch  phy1_pwr.kicad_sch  psu.kicad_sch
pcb/pdu/: .gitignore  pdu.kicad_pcb  pdu.kicad_pro  pdu.kicad_sch
pcb/switch-engine/: .gitignore  fpgasupport.kicad_sch  linecards.kicad_sch  mcu.kicad_sch  psu.kicad_sch  (+9 more)
testdata/: ping-host1.pcapng  ping-host2.pcapng
(+236 files in other folders)
